# Algo

./: .gitignore  README.md  pyproject.toml
docs/: API_INTEGRATIONS.md  ARCHITECTURE.md
examples/: history.sample.json  offers.sample.json
src/delivery_optimizer/: __init__.py  calibration.py  cli.py  dashboard.py  live.py  models.py  normalization.py  optimizer.py  policies.py  prediction.py  profiles.py  reports.py  routing.py  simulation.py  store.py
src/delivery_optimizer/integrations/: __init__.py  auth.py  base.py  doordash.py  grubhub.py  http.py  manual.py  uber.py
tests/: test_advanced_features.py  test_optimizer.py  test_product_layer.py
