[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-session-optimizer"
version = "0.1.0"
description = "Platform-agnostic decision engine for ranking delivery offers by expected session profit."
requires-python = ">=3.10"
authors = [{ name = "Delivery Session Optimizer" }]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
delivery-optimizer = "delivery_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
